--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -119,6 +119,7 @@
 </head>
 <body>
 	<div class="nav">
+比好上的放松的方式对发生的士大夫士大夫是
 		<ul>
 			<li class="one"><a href=""><i></i>我的主页</a></li>
 			<li class="two"><a href=""><i></i>新闻头条</a></li>
